# Life_Pilot

./: .env.example  CAHIER_DES_CHARGES_LIFEPILOT_ADMIN.md  README.md  docker-compose.yml  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  accounts.py  assets.py  assistant.py  auth.py  contracts.py  dashboard.py  documents.py  health.py  internal.py  reminders.py  settings.py  transactions.py  vehicles.py
apps/api/app/connectors/: __init__.py
apps/api/app/connectors/open_banking/: __init__.py  base.py  connection_store.py  gocardless.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  contract.py  vehicle.py
apps/api/app/schemas/: __init__.py  account.py  contract.py  document.py  health.py  monthly_summary.py  reminder.py  transaction.py  user_settings.py  vehicle.py
apps/api/app/services/: account_service.py  audit_log_service.py  auth_service.py  categorization_service.py  contract_service.py  document_extraction_service.py  document_requirement_service.py  document_service.py  document_transaction_matching_service.py  email_ingestion_service.py  manual_correction_service.py  matching_service.py  monthly_summary_service.py  notification_service.py  recurrence_detection_service.py  reminder_engine.py  reminder_service.py  storage_service.py  transaction_service.py  vehicle_service.py
apps/api/app/services/importers/: csv_bank_importer.py
apps/api/app/workers/: __init__.py  consent_expiration_notifications.py
docs/: architecture.md  (+2 more)
(+36 files in other folders)
